small font correction to make too rich line more readable

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -11,6 +11,8 @@ base()
 .toorich
   display: none
   line-height: 1.4em
+  font-weight: 400
+  opacity: .8
 
   a
     font-weight: 700
